--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- hfpдел-заголовок страницы -->
 
         <header class="header">
-            <img class="header__image" src="/images/header.jpg" alt="Stylish interior with sofa, coffee table and vase.">
+            <img class="header__image" src="./images/header.jpg" alt="Stylish interior with sofa, coffee table and vase.">
             <h1 class="header__title">Mod Studio</h1>
             <h3 class="header__subtitle">Modern Web Studio</h3>
         </header>
@@ -23,11 +23,11 @@
 
         <!-- раздел с биографией автора -->
             <section class="biography">
-                <img class="biography__image" src="/images/biography.jpg" alt="A barefoot girl in a long dress and a hat walks along the sand.">
+                <img class="biography__image" src="./images/biography.jpg" alt="A barefoot girl in a long dress and a hat walks along the sand.">
                 <h3 class="biography__title">Biography</h3>
                 <h2 class="biography__author">Katya Mills</h2>
                 <h3 class="biography__subtitle">Art Director Scenography / Styling / Creative Photography / Design</h3>
-                <img class="biography__decor" src="/images/rectangle.png" alt="Decorative line.">
+                <img class="biography__decor" src="./images/rectangle.png" alt="Decorative line.">
                 <p class="biography__description">“The more I deal with the work as something that is my own,  as something that is personal, the more successful it is.”</p>
             </section>
 
@@ -35,7 +35,7 @@
             <section class="designers">
                 <h3 class="designers__title">Designers</h3>
                 <figure>
-                    <img src="/images/wonder.jpg" alt="Girl in a coat, scarf and knitted hat looks into the distance.">
+                    <img src="./images/wonder.jpg" alt="Girl in a coat, scarf and knitted hat looks into the distance.">
                     <figcaption>
                         <span class="designers__name">Jess Wonder</span><br>
                         <span class="designers__data">From/</span> Be more flower<br>
@@ -44,7 +44,7 @@
                 </figure>
 
                 <figure>
-                    <img src="/images/clein.jpg" alt="The model is holding a folder and a phone.">
+                    <img src="./images/clein.jpg" alt="The model is holding a folder and a phone.">
                     <figcaption>
                         <span class="designers__name">Kameron Clein</span><br>
                         <span class="designers__data">From/</span> Be more flower<br>
@@ -54,7 +54,7 @@
                 </figure>
 
                 <figure>
-                    <img src="/images/red.jpg" alt="The model sits and holds a glass of coffee, with a notepad and glasses on her knees.">
+                    <img src="./images/red.jpg" alt="The model sits and holds a glass of coffee, with a notepad and glasses on her knees.">
                     <figcaption>
                         <span class="designers__name">LOUISSE RED</span><br>
                         <span class="designers__data">From/</span> Be more flower<br>
@@ -73,17 +73,17 @@
                 <a class="testimonials__link" href="">www.whitepapers.com</a>
                 <h3 class="testimonials__subtitle">Website</h3>
                 <a class="testimonials__link" href="">www.whitepapers.com</a>
-                <img class="testimonials__image_size_large" src="/images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
+                <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
                 <p class="testimonials__content">I just really want to do good work and work with some great people, people who challenge me.</p>
-                <img class="testimonials__image_size_small" src="/images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
             </section>
 
             <!-- раздел с сильными сторонами -->
             <section class="strengths">
                 <h3 class="strengths__subtitle">Strong points</h3>
                 <h2 class="strengths__title">Strengths</h2>
-                <img class="strengths__image strengths__image-one" src="/images/strength-1.jpg" alt="Laptop is on the table.">
-                <img class="strengths__image strengths__image-two" src="/images/strength-2.jpg" alt="Stylish interior with round armchair with pillows.">
+                <img class="strengths__image strengths__image-one" src="./images/strength-1.jpg" alt="Laptop is on the table.">
+                <img class="strengths__image strengths__image-two" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows.">
                 <ul class="strengths__list">
                     <li class="strengths__item">Interiors</li>
                     <li class="strengths__item">Outdoors</li>
@@ -98,7 +98,7 @@
                     <li class="strengths__item">Nature</li>
                     <li class="strengths__item">Creativity</li>
                 </ul>
-                <img class="strengths__image strengths__image-three" src="/images/strength-2.jpg" alt="Stylish interior with round armchair with pillows/">
+                <img class="strengths__image strengths__image-three" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows/">
                
             </section>
 
