semantics bug fix after first rewiew

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
                 <figure>
                     <img src="./images/wonder.jpg" alt="Girl in a coat, scarf and knitted hat looks into the distance.">
                     <figcaption>
-                        <span class="designers__name">Jess Wonder</span><br>
-                        <span class="designers__data">From/</span> Be more flower<br>
-                        <span class="designers__data">Skills/</span>Design Strategy / Marketing
+                        <b>JESS WONDER</b><br>
+                        <b>From/</b>Be more flower<br>
+                        <b>Skills/</b>Design Strategy / Marketing
                     </figcaption>
                 </figure>
 
                 <figure>
                     <img src="./images/clein.jpg" alt="The model is holding a folder and a phone.">
                     <figcaption>
-                        <span class="designers__name">Kameron Clein</span><br>
-                        <span class="designers__data">From/</span> Be more flower<br>
-                        <span class="designers__data">Skills/</span>Design Strategy / Marketing
+                        <b>KAMERON CLEIN</b><br>
+                        <b>From/</b>Be more flower<br>
+                        <b>Skills/</b>Design Strategy / Marketing
                     </figcaption>
 
                 </figure>
@@ -56,9 +56,9 @@
                 <figure>
                     <img src="./images/red.jpg" alt="The model sits and holds a glass of coffee, with a notepad and glasses on her knees.">
                     <figcaption>
-                        <span class="designers__name">LOUISSE RED</span><br>
-                        <span class="designers__data">From/</span> Be more flower<br>
-                        <span class="designers__data">Skills/</span>Design Strategy / Marketing
+                        <b>LOUISSE RED</b><br>
+                        <b>From/</b>Be more flower<br>
+                        <b>Skills/</b>Design Strategy / Marketing
                     </figcaption>
                 </figure>
                 
