--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Playfair+Display:wght@500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="./pages/index.css">
 
 </head>
-<body>
+<body class="body">
 
     <div class="page">
 
@@ -42,7 +41,7 @@
                 <h3 class="designers__title">Designers</h3>
                 <figure>
                     <img src="./images/wonder.jpg" alt="Girl in a coat, scarf and knitted hat looks into the distance.">
-                    <figcaption>
+                    <figcaption class="designers__caption">
                         <b>JESS WONDER</b><br>
                         <b>From/</b> Be more flower<br>
                         <b>Skills/</b> Design Strategy / Marketing
@@ -51,7 +50,7 @@
 
                 <figure>
                     <img src="./images/clein.jpg" alt="The model is holding a folder and a phone.">
-                    <figcaption>
+                    <figcaption class="designers__caption">
                         <b>KAMERON CLEIN</b><br>
                         <b>From/</b> Be more flower<br>
                         <b>Skills/</b> Design Strategy / Marketing
@@ -61,7 +60,7 @@
 
                 <figure>
                     <img src="./images/red.jpg" alt="The model sits and holds a glass of coffee, with a notepad and glasses on her knees.">
-                    <figcaption>
+                    <figcaption class="designers__caption">
                         <b>LOUISSE RED</b><br>
                         <b>From/</b> Be more flower<br>
                         <b>Skills/</b> Design Strategy / Marketing
@@ -86,8 +85,8 @@
 
             <!-- раздел с сильными сторонами -->
             <section class="strengths">
-                <h3 class="strengths__subtitle">Strong points</h3>
-                <h2 class="strengths__title">Strengths</h2>
+                <h3 class="strengths__title">Strong points</h3>
+                <h2 class="strengths__subtitle">Strengths</h2>
                 <img class="strengths__image strengths__image-one" src="./images/strength-1.jpg" alt="Laptop is on the table.">
                 <img class="strengths__image strengths__image-two" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows.">
                 <ul class="strengths__list">
