--- a/index.html
+++ b/index.html
@@ -8,25 +8,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Playfair+Display:wght@500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./style/style.css">
 
 </head>
 <body class="body">
 
     <div class="page">
 
-        <!-- раздел-заголовок страницы -->
-
         <header class="header">
-            <img class="header__image" src="./images/header.jpg" alt="Stylish interior with sofa, coffee table and vase.">
-            <h1 class="header__title">Mod Studio</h1>
-            <h3 class="header__subtitle">Modern Web Studio</h3>
+            <button type="button" class="header__menu">
+                <img src="" alt="Menu button.">
+            </button>
         </header>
 
-        <!-- основное содержание страницы -->
         <main class="content">
 
-        <!-- раздел с биографией автора -->
+            <section class="hero">
+                <img class="hero__image" src="./images/header.jpg" alt="Stylish interior with sofa, coffee table and vase.">
+                <div class="hero__box">
+                    <h1 class="hero__title">Mod Studio</h1>
+                    <h3 class="hero__subtitle">Modern Web Studio</h3>
+                </div>
+            </section>
+
             <section class="biography">
                 <img class="biography__image" src="./images/biography.jpg" alt="A barefoot girl in a long dress and a hat walks along the sand.">
                 <h3 class="biography__title">Biography</h3>
@@ -36,7 +40,6 @@
                 <p class="biography__description">“The more I deal with the work as something that is my own,  as something that is personal, the more successful it is.”</p>
             </section>
 
-        <!-- раздел с дизайнерами -->
             <section class="designers">
                 <h3 class="designers__title">Designers</h3>
                 <figure>
