add base styling for hero page

--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
 
     <div class="page">
 
-        <header class="header">
+        <header class="header sizer">
             <button type="button" class="header__menu">
-                <img src="" alt="Menu button.">
+                <img src="./images/Menu.png" alt="Menu button." class="header__image">
             </button>
         </header>
 
         <main class="content">
 
-            <section class="hero">
-                <img class="hero__image" src="./images/header.jpg" alt="Stylish interior with sofa, coffee table and vase.">
+            <section class="hero sizer"> 
                 <div class="hero__box">
                     <h1 class="hero__title">Mod Studio</h1>
-                    <h3 class="hero__subtitle">Modern Web Studio</h3>
+                    <p class="hero__subtitle">Modern Web Studio</p>
                 </div>
             </section>
 
@@ -72,7 +71,6 @@
                 
             </section>
 
-            <!-- раздел с отзывами -->
             <section class="testimonials">
                 <h3 class="testimonials__title">Testimonials</h3>
                 <h3 class="testimonials__subtitle">Creativity</h3>
@@ -86,7 +84,6 @@
                 <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
             </section>
 
-            <!-- раздел с сильными сторонами -->
             <section class="strengths">
                 <h3 class="strengths__title">Strong points</h3>
                 <h2 class="strengths__subtitle">Strengths</h2>
@@ -112,7 +109,6 @@
 
         </main>
 
-        <!-- раздел-футер со ссылками для мобильной версии -->
         <footer>
             <a class="footer__link" href="">B</a>
             <a class="footer__link" href="">D</a>
