bug fix after review

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="page">
 
-        <header class="header sizer">
+        <header class="header">
             <button type="button" class="header__menu">
                 <img src="./images/Menu.png" alt="Menu button." class="header__image">
             </button>
@@ -23,7 +23,7 @@
 
         <main class="content">
 
-            <section class="hero sizer"> 
+            <section class="hero"> 
                 <div class="hero__box">
                     <h1 class="hero__title">Mod Studio</h1>
                     <p class="hero__subtitle">Modern Web Studio</p>
