add styles for biography-section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
             <section class="biography">
                 <img class="biography__image" src="./images/biography.jpg" alt="A barefoot girl in a long dress and a hat walks along the sand.">
                 <h3 class="biography__title">Biography</h3>
-                <h2 class="biography__author">Katya Mills</h2>
-                <h3 class="biography__subtitle">Art Director Scenography / Styling / Creative Photography / Design</h3>
+                <h2 class="biography__author">Katya 
+                    <br> Mills</h2>
+                <h3 class="biography__subtitle">Art Director 
+                    <br> Scenography / Styling / Creative Photography / Design</h3>
                 <img class="biography__decor" src="./images/rectangle.png" alt="Decorative line.">
                 <p class="biography__description">“The more I deal with the work as something that is my own,  as something that is personal, the more successful it is.”</p>
             </section>
