--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                 <h3 class="biography__subtitle">Art Director 
                     <br> Scenography / Styling / Creative Photography / Design</h3>
                 <img class="biography__decor" src="./images/rectangle.png" alt="Decorative line.">
-                <p class="biography__description">“The more I deal with the work as something that is my own,  as something that is personal, the more successful it is.”</p>
+                <p class="biography__description">“The more I deal with the work 
+                    <br> as something that is my own, 
+                    <br> as something that is personal, 
+                    <br> the more successful it is.”</p>
             </section>
 
             <section class="designers">
