bug-fix after review

--- a/index.html
+++ b/index.html
@@ -31,16 +31,19 @@
 
             <section class="biography">
                 <img class="biography__image" src="./images/biography.jpg" alt="A barefoot girl in a long dress and a hat walks along the sand.">
-                <h3 class="biography__title">Biography</h3>
-                <h2 class="biography__author">Katya 
-                    <br> Mills</h2>
-                <h3 class="biography__subtitle">Art Director 
-                    <br> Scenography / Styling / Creative Photography / Design</h3>
-                <img class="biography__decor" src="./images/rectangle.png" alt="Decorative line.">
-                <p class="biography__description">“The more I deal with the work 
-                    <br> as something that is my own, 
-                    <br> as something that is personal, 
-                    <br> the more successful it is.”</p>
+                <h2 class="biography__title">Biography</h3>
+                <div class="biography__content">
+                    <h3 class="biography__author">Katya 
+                        <br> Mills</h2>
+                    <p class="biography__job">Art Director <br>
+                            Scenography / Styling / Creative Photography / Design</p>
+                    <p class="biography__description">
+                        “The more I deal with the work 
+                        <br> as something that is my own, 
+                        <br> as something that is personal, 
+                        <br> the more successful it is.”
+                    </p>
+                </div>
             </section>
 
             <section class="designers">
