bug fi[ after review

--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                 <h3 class="designers__title">Designers</h3>
                 <figure>
                     <img src="./images/wonder.jpg" alt="Girl in a coat, scarf and knitted hat looks into the distance.">
-
                     <figcaption class="designers__caption">
-
                         <b>JESS WONDER</b><br>
                         <b>From/</b> Be more flower<br>
                         <b>Skills/</b> Design Strategy / Marketing
@@ -61,9 +59,7 @@
 
                 <figure>
                     <img src="./images/clein.jpg" alt="The model is holding a folder and a phone.">
-
                     <figcaption class="designers__caption">
-
                         <b>KAMERON CLEIN</b><br>
                         <b>From/</b> Be more flower<br>
                         <b>Skills/</b> Design Strategy / Marketing
@@ -80,11 +76,10 @@
                         <b>Skills/</b> Design Strategy / Marketing
                     </figcaption>
                 </figure>
-                
             </section>
 
             <section class="testimonials">
-                <h3 class="testimonials__title">Testimonials</h3>
+                <h2 class="testimonials__title">Testimonials</h2>
                 <h3 class="testimonials__subtitle">Creativity</h3>
                 <a class="testimonials__link" href="">www.whitepapers.com</a>
                 <h3 class="testimonials__subtitle">Creativity</h3>
@@ -92,12 +87,13 @@
                 <h3 class="testimonials__subtitle">Website</h3>
                 <a class="testimonials__link" href="">www.whitepapers.com</a>
                 <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
-                <p class="testimonials__content">I just really want to do good work and work with some great people, people who challenge me.</p>
-                <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                <div class="testimonials__content">
+                    <p class="testimonials__description">I just really want to do good work and work with some great people, people who challenge me.</p>
+                    <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                </div>
             </section>
 
             <section class="strengths">
-
                 <h3 class="strengths__title">Strong points</h3>
                 <h2 class="strengths__subtitle">Strengths</h2>
                 <img class="strengths__image strengths__image-one" src="./images/strength-1.jpg" alt="Laptop is on the table.">
