add styles for testimonials

--- a/index.html
+++ b/index.html
@@ -76,16 +76,20 @@
             </section>
 
             <section class="testimonials">
-                <h3 class="testimonials__title">Testimonials</h3>
-                <h3 class="testimonials__subtitle">Creativity</h3>
-                <a class="testimonials__link" href="">www.whitepapers.com</a>
-                <h3 class="testimonials__subtitle">Creativity</h3>
-                <a class="testimonials__link" href="">www.whitepapers.com</a>
-                <h3 class="testimonials__subtitle">Website</h3>
-                <a class="testimonials__link" href="">www.whitepapers.com</a>
-                <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
-                <p class="testimonials__content">I just really want to do good work and work with some great people, people who challenge me.</p>
-                <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                <h2 class="testimonials__title">Testimonials</h3>
+                <div class="testimonials__links">
+                    <h3 class="testimonials__subtitle">Creativity</h3>
+                    <a class="testimonials__link" href="">www.whitepapers.com</a>
+                    <h3 class="testimonials__subtitle">Creativity</h3>
+                    <a class="testimonials__link" href="">www.whitepapers.com</a>
+                    <h3 class="testimonials__subtitle">Website</h3>
+                    <a class="testimonials__link" href="">www.whitepapers.com</a>
+                    <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
+                </div>     
+                <div class="testimonials__mission">
+                    <p class="testimonials__content">I just really want to do good work and work with some great people, people who challenge me.</p>
+                    <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                </div>     
             </section>
 
             <section class="strengths">
