Corrected photo alt

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </section>
 
             <section class="biography">
-                <img class="biography__image" src="./images/biography.jpg" alt="A barefoot girl in a long dress and a hat walks along the sand.">
+                <img class="biography__image" src="./images/biography.jpg" alt="Photo of Katya Mills.">
                 <h2 class="biography__title">Biography</h3>
                 <div class="biography__content">
                     <h3 class="biography__author">Katya 
@@ -49,7 +49,7 @@
             <section class="designers">
                 <h3 class="designers__title">Designers</h3>
                 <figure>
-                    <img src="./images/wonder.jpg" alt="Girl in a coat, scarf and knitted hat looks into the distance.">
+                    <img src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
                     <figcaption class="designers__caption">
                         <b>JESS WONDER</b><br>
                         <b>From/</b> Be more flower<br>
@@ -58,7 +58,7 @@
                 </figure>
 
                 <figure>
-                    <img src="./images/clein.jpg" alt="The model is holding a folder and a phone.">
+                    <img src="./images/clein.jpg" alt="Photo of Kameron Clein.">
                     <figcaption class="designers__caption">
                         <b>KAMERON CLEIN</b><br>
                         <b>From/</b> Be more flower<br>
@@ -68,7 +68,7 @@
                 </figure>
 
                 <figure>
-                    <img src="./images/red.jpg" alt="The model sits and holds a glass of coffee, with a notepad and glasses on her knees.">
+                    <img src="./images/red.jpg" alt="Photo of Louisse Red.">
 
                     <figcaption class="designers__caption">
                         <b>LOUISSE RED</b><br>
