--- a/index.html
+++ b/index.html
@@ -76,20 +76,22 @@
             </section>
 
             <section class="testimonials">
-                <h2 class="testimonials__title">Testimonials</h3>
-                <div class="testimonials__links">
-                    <h3 class="testimonials__subtitle">Creativity</h3>
-                    <a class="testimonials__link" href="">www.whitepapers.com</a>
-                    <h3 class="testimonials__subtitle">Creativity</h3>
-                    <a class="testimonials__link" href="">www.whitepapers.com</a>
-                    <h3 class="testimonials__subtitle">Website</h3>
-                    <a class="testimonials__link" href="">www.whitepapers.com</a>
+
+                <h2 class="testimonials__title">Testimonials</h2>
+
+                <div class="testimonials__content">
+                    <div class="testimonials__links">
+                        <a class="testimonials__link" href=""><b>Website</b> www.whitepapers.com</a>
+                        <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
+                        <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
+                    </div>
                     <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
-                </div>     
-                <div class="testimonials__mission">
-                    <p class="testimonials__content">I just really want to do good work and work with some great people, people who challenge me.</p>
-                    <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
-                </div>     
+                    <div class="testimonials__mission">
+                        <p class="testimonials__quote">I just really want to do good work and work with some great people, people who challenge me.</p>
+                        <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                    </div> 
+                </div>  
+
             </section>
 
             <section class="strengths">
