add new html structure

--- a/index.html
+++ b/index.html
@@ -47,25 +47,24 @@
             </section>
 
             <section class="designers">
+
                 <h3 class="designers__title">Designers</h3>
-                <figure>
+
+                <div class="designers__item">
                     <img src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
-                    <figcaption class="designers__caption">
-                        <b>JESS WONDER</b><br>
-                        <b>From/</b> Be more flower<br>
-                        <b>Skills/</b> Design Strategy / Marketing
-                    </figcaption>
-                </figure>
+                    <p class="designers__name">JESS WONDER</p>
+                    <p class="designers__from">Be more flower</p>
+                    <p class="designers__skills">Design Strategy / Marketing</p>
+                </div>
 
-                <figure>
+                <div class="designers__item">
                     <img src="./images/clein.jpg" alt="Photo of Kameron Clein.">
-                    <figcaption class="designers__caption">
-                        <b>KAMERON CLEIN</b><br>
-                        <b>From/</b> Be more flower<br>
-                        <b>Skills/</b> Design Strategy / Marketing
-                    </figcaption>
+                    <p class="designers__name">KAMERON CLEIN</p>   <b></b><br>
+                    <p class="designers__from">Be more flower</p>
+                    <p class="designers__skills">Design Strategy / Marketing</p>
+                </div>
 
-                </figure>
+             
 
                 <figure>
                     <img src="./images/red.jpg" alt="Photo of Louisse Red.">
@@ -76,6 +75,7 @@
                         <b>Skills/</b> Design Strategy / Marketing
                     </figcaption>
                 </figure>
+
             </section>
 
             <section class="testimonials">
