add new html structure

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <div class="designers__item">
                     <img src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
                     <p class="designers__name">JESS WONDER</p>
-                    <p class="designers__from">Be more flower</p>
-                    <p class="designers__skills">Design Strategy / Marketing</p>
+                    <p class="designers__from">From/ Be more flower</p>
+                    <p class="designers__skills">Skills/ Design Strategy / Marketing</p>
                 </div>
 
                 <div class="designers__item">
@@ -64,17 +64,12 @@
                     <p class="designers__skills">Design Strategy / Marketing</p>
                 </div>
 
-             
-
-                <figure>
+                <div class="designers__item">
                     <img src="./images/red.jpg" alt="Photo of Louisse Red.">
-
-                    <figcaption class="designers__caption">
-                        <b>LOUISSE RED</b><br>
-                        <b>From/</b> Be more flower<br>
-                        <b>Skills/</b> Design Strategy / Marketing
-                    </figcaption>
-                </figure>
+                    <p class="designers__name">LOUISSE RED</p>   <b></b><br>
+                    <p class="designers__from">From/ Be more flower</p>
+                    <p class="designers__skills">Skills/ Design Strategy / Marketing</p>
+                </div>
 
             </section>
 
