add styles for designers-section

--- a/index.html
+++ b/index.html
@@ -50,26 +50,42 @@
 
                 <h3 class="designers__title">Designers</h3>
 
-                <div class="designers__item">
-                    <img src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
-                    <p class="designers__name">JESS WONDER</p>
-                    <p class="designers__from">From/ Be more flower</p>
-                    <p class="designers__skills">Skills/ Design Strategy / Marketing</p>
-                </div>
+                <div class="designers__line">
 
-                <div class="designers__item">
-                    <img src="./images/clein.jpg" alt="Photo of Kameron Clein.">
-                    <p class="designers__name">KAMERON CLEIN</p>   <b></b><br>
-                    <p class="designers__from">Be more flower</p>
-                    <p class="designers__skills">Design Strategy / Marketing</p>
-                </div>
+                    <figure class="designers__item">
+                        <div class="designers__photo-container designers__photo-container_resized">
+                            <img class="designers__photo" src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
+                        </div>
+                        <figcaption class="designers__info">
+                            <p class="designers__name">Jess Wonder</p>
+                            <p class="designers__from">Be more flower</p>
+                            <p class="designers__skills">Design Strategy / Marketing</p>
+                        </figcaption>
+                    </figure>
 
-                <div class="designers__item">
-                    <img src="./images/red.jpg" alt="Photo of Louisse Red.">
-                    <p class="designers__name">LOUISSE RED</p>   <b></b><br>
-                    <p class="designers__from">From/ Be more flower</p>
-                    <p class="designers__skills">Skills/ Design Strategy / Marketing</p>
-                </div>
+                    <figure class="designers__item">
+                        <div class="designers__photo-container">
+                            <img class="designers__photo" src="./images/wonder.jpg" alt="Photo of Kameron Clein.">
+                        </div>
+                        <figcaption class="designers__info">
+                            <p class="designers__name">Kameron Clein</p> 
+                            <p class="designers__from">Be more flower</p>
+                            <p class="designers__skills">Design Strategy / Marketing</p>
+                        </figcaption>
+                    </figure>
+
+                    <figure class="designers__item">
+                        <div class="designers__photo-container">
+                            <img class="designers__photo" src="./images/red.jpg" alt="Photo of Louisse Red.">
+                        </div>
+                        <figcaption class="designers__info">
+                            <p class="designers__name">Louisse Red</p> 
+                            <p class="designers__from">Be more flower</p>
+                            <p class="designers__skills">Design Strategy / Marketing</p>
+                        </figcaption>
+                    </figure>
+
+                </div>  
 
             </section>
 
