Header hero designers done

--- a/index.html
+++ b/index.html
@@ -30,18 +30,24 @@
             </section>
 
             <section class="biography">
-                <img class="biography__image" src="./images/biography.jpg" alt="Photo of Katya Mills.">
+                <picture>
+                    <source srcset="./images/biography_small.jpg" media="(max-width: 990px)">
+                    <img class="biography__image" src="./images/biography.jpg" alt="Photo of Katya Mills.">
+                </picture>
                 <h2 class="biography__title">Biography</h3>
                 <div class="biography__content">
                     <h3 class="biography__author">Katya 
                         <br> Mills</h2>
-                    <p class="biography__job">Art Director <br>
-                            Scenography / Styling / Creative Photography / Design</p>
+                    <p class="biography__position">Art Director</p>
+                    <p class="biography__job">Scenography</p>
+                    <p class="biography__job">Styling</p>
+                    <p class="biography__job">Creative Photography</p>
+                    <p class="biography__job">Design</p>
                     <p class="biography__description">
                         “The more I deal with the work 
-                        <br> as something that is my own, 
-                        <br> as something that is personal, 
-                        <br> the more successful it is.”
+                        as something that is my own, 
+                        as something that is personal, 
+                        the more successful it is.”
                     </p>
                 </div>
             </section>
@@ -53,7 +59,7 @@
                 <div class="designers__line">
 
                     <figure class="designers__item">
-                        <div class="designers__photo-container designers__photo-container_resized">
+                        <div class="designers__photo-container">
                             <img class="designers__photo" src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
                         </div>
                         <figcaption class="designers__info">
@@ -65,7 +71,7 @@
 
                     <figure class="designers__item">
                         <div class="designers__photo-container">
-                            <img class="designers__photo" src="./images/wonder.jpg" alt="Photo of Kameron Clein.">
+                            <img class="designers__photo" src="./images/clein.jpg" alt="Photo of Kameron Clein.">
                         </div>
                         <figcaption class="designers__info">
                             <p class="designers__name">Kameron Clein</p> 
