--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="body">
 
         <header class="header">
-            <button type="button" class="header__menu">
+            <button type="button" class="header__menu link">
                 <img src="./images/Menu.png" alt="Menu button." class="header__image">
             </button>  
         </header>
@@ -30,7 +30,7 @@
             </section>
 
             <section class="biography">
-                <img class="biography__image" src="./images/biography.jpg" alt="Photo of Katya Mills.">
+                <img class="biography__image img-scale" src="./images/biography.jpg" alt="Photo of Katya Mills.">
                 <h2 class="biography__title">Biography</h3>
                 <div class="biography__content">
                     <h3 class="biography__author">Katya 
@@ -95,14 +95,14 @@
 
                 <div class="testimonials__content">
                     <div class="testimonials__links">
-                        <a class="testimonials__link" href=""><b>Website</b> www.whitepapers.com</a>
-                        <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
-                        <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
+                        <a class="testimonials__link link" href=""><b>Website</b> www.whitepapers.com</a>
+                        <a class="testimonials__link link" href=""><b>Creativity</b> www.whitepapers.com</a>
+                        <a class="testimonials__link link" href=""><b>Creativity</b> www.whitepapers.com</a>
                     </div>
-                    <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
+                    <img class="testimonials__image_size_large img-scale" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
                     <div class="testimonials__mission">
                         <p class="testimonials__quote">I just really want to do good work and work with some great people, people who challenge me.</p>
-                        <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                        <img class="testimonials__image_size_small img-scale" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
                     </div> 
                 </div>  
 
@@ -111,48 +111,48 @@
             <section class="strengths">
                 <h2 class="strengths__title">Strong points</h2>
                 <div class="strengths__content">
-                    <img class="strengths__image" src="./images/strength-1.jpg" alt="Laptop is on the table.">
-                    <img class="strengths__image" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows.">
+                    <img class="strengths__image img-scale" src="./images/strength-1.jpg" alt="Laptop is on the table.">
+                    <img class="strengths__image img-scale" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows.">
                     <div class="strengths__links">
                         <h3 class="strengths__subtitle"><a class="strengths__link" href="#">Strengths</a></h3>
                         <ul class="strengths__list">
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Interiors</a></li>
+                                <a class="strengths__link link" href="#">Interiors</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Outdoors</a></li>
+                                <a class="strengths__link link" href="#">Outdoors</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Portraits</a></li>
+                                <a class="strengths__link link" href="#">Portraits</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Styling</a></li>
+                                <a class="strengths__link link" href="#">Styling</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Events</a></li>
+                                <a class="strengths__link link" href="#">Events</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Architecture</a></li>
+                                <a class="strengths__link link" href="#">Architecture</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Design</a></li>
+                                <a class="strengths__link link" href="#">Design</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Celebrations</a></li>
+                                <a class="strengths__link link" href="#">Celebrations</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Artistic</a></li>
+                                <a class="strengths__link link" href="#">Artistic</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Fashion</a></li>
+                                <a class="strengths__link link" href="#">Fashion</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Nature</a></li>
+                                <a class="strengths__link link" href="#">Nature</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Creativity</a></li>
+                                <a class="strengths__link link" href="#">Creativity</a></li>
                         </ul>
                     </div>
-                    <img class="strengths__image" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows/">
+                    <img class="strengths__image img-scale" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows/">
                 </div>
             </section>
 
         </main>
 
         <footer>
-            <a class="footer__link" href="">B</a>
-            <a class="footer__link" href="">D</a>
-            <a class="footer__link" href="">T</a>
-            <a class="footer__link" href="">S</a>
+            <a class="footer__link link" href="">B</a>
+            <a class="footer__link link" href="">D</a>
+            <a class="footer__link link" href="">T</a>
+            <a class="footer__link link" href="">S</a>
         </footer>
 </body>
 </html>
