add bem for testimonials and strong points

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <header class="header">
             <button type="button" class="header__menu">
                 <img src="./images/Menu.png" alt="Menu button." class="header__image">
-            </button>  
+            </button>
         </header>
 
         <main class="content">
 
-            <section class="hero"> 
+            <section class="hero">
                 <div class="hero__box">
                     <h1 class="hero__title">Mod Studio</h1>
                     <p class="hero__subtitle">Modern Web Studio</p>
@@ -33,14 +33,14 @@
                 <img class="biography__image" src="./images/biography.jpg" alt="Photo of Katya Mills.">
                 <h2 class="biography__title">Biography</h3>
                 <div class="biography__content">
-                    <h3 class="biography__author">Katya 
+                    <h3 class="biography__author">Katya
                         <br> Mills</h2>
                     <p class="biography__job">Art Director <br>
                             Scenography / Styling / Creative Photography / Design</p>
                     <p class="biography__description">
-                        “The more I deal with the work 
-                        <br> as something that is my own, 
-                        <br> as something that is personal, 
+                        “The more I deal with the work
+                        <br> as something that is my own,
+                        <br> as something that is personal,
                         <br> the more successful it is.”
                     </p>
                 </div>
@@ -68,7 +68,7 @@
                             <img class="designers__photo" src="./images/wonder.jpg" alt="Photo of Kameron Clein.">
                         </div>
                         <figcaption class="designers__info">
-                            <p class="designers__name">Kameron Clein</p> 
+                            <p class="designers__name">Kameron Clein</p>
                             <p class="designers__from">Be more flower</p>
                             <p class="designers__skills">Design Strategy / Marketing</p>
                         </figcaption>
@@ -79,19 +79,21 @@
                             <img class="designers__photo" src="./images/red.jpg" alt="Photo of Louisse Red.">
                         </div>
                         <figcaption class="designers__info">
-                            <p class="designers__name">Louisse Red</p> 
+                            <p class="designers__name">Louisse Red</p>
                             <p class="designers__from">Be more flower</p>
                             <p class="designers__skills">Design Strategy / Marketing</p>
                         </figcaption>
                     </figure>
 
-                </div>  
+                </div>
 
             </section>
 
+            <!-- БЛОКИ ДЛЯ ДОМАШНЕЙ РАБОТЫ ПО БЭМ -->
+
             <section class="testimonials">
 
-                <h2 class="testimonials__title">Testimonials</h2>
+                <h2 class="title title_testimonials">Testimonials</h2>
 
                 <div class="testimonials__content">
                     <div class="testimonials__links">
@@ -99,22 +101,24 @@
                         <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
                         <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
                     </div>
-                    <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
-                    <div class="testimonials__mission">
+                    <img class="testimonials__interior-image" src="./images/testimonials-1.jpg" alt="Coffeshop interior.">
+                    <div class="testimonials__description">
                         <p class="testimonials__quote">I just really want to do good work and work with some great people, people who challenge me.</p>
-                        <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
-                    </div> 
-                </div>  
+                        <img class="testimonials__styling-image" src="./images/testimonials-2.jpg" alt="Shopping bag with art-magazines.">
+                    </div>
+                </div>
 
             </section>
 
             <section class="strengths">
-                <h2 class="strengths__title">Strong points</h2>
+
+                <h2 class="title title_strengths">Strong points</h2>
+
                 <div class="strengths__content">
-                    <img class="strengths__image" src="./images/strength-1.jpg" alt="Laptop is on the table.">
-                    <img class="strengths__image" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows.">
+                    <img class="portfolio-image" src="./images/strength-1.jpg" alt="Laptop is on the table.">
+                    <img class="portfolio-image" src="./images/strength-2.jpg" alt="Stylish interior.">
                     <div class="strengths__links">
-                        <h3 class="strengths__subtitle"><a class="strengths__link" href="#">Strengths</a></h3>
+                        <h3 class="strengths__subtitle">Strengths</h3>
                         <ul class="strengths__list">
                             <li class="strengths__item">
                                 <a class="strengths__link" href="#">Interiors</a></li>
@@ -142,7 +146,7 @@
                                 <a class="strengths__link" href="#">Creativity</a></li>
                         </ul>
                     </div>
-                    <img class="strengths__image" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows/">
+                    <img class="portfolio-image" src="./images/strength-2.jpg" alt="Stylish interior.">
                 </div>
             </section>
 
